--- a/cluster/apps/default/teedy/helm-release.yaml
+++ b/cluster/apps/default/teedy/helm-release.yaml
@@ -64,7 +64,7 @@ spec:
       enabled: true
       persistence:
         enabled: true
-        storageClass: freenas-iscsi-csi
+        storageClass: rook-ceph
     additionalContainers:
     - name: docs-importer
       image: sismics/docs-importer:latest
