--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -51,6 +51,8 @@ spec:
           operator: "Exists"
       ingress:
         enabled: true
+        pathType: Prefix
+        ingressClassName: "nginx"
         annotations:
           kubernetes.io/ingress.class: "nginx"
           kubernetes.io/tls-acme: "true"
@@ -276,6 +278,8 @@ spec:
       fullnameOverride: prometheus
       ingress:
         enabled: true
+        pathType: Prefix
+        ingressClassName: "nginx"
         annotations:
           kubernetes.io/ingress.class: "nginx"
           kubernetes.io/tls-acme: "true"
