it really should be sync though

--- a/cluster/apps/monitoring/s3-sync/cron-job.yaml
+++ b/cluster/apps/monitoring/s3-sync/cron-job.yaml
@@ -24,7 +24,7 @@ spec:
             - "-v"
             - "--config"
             - "/config/rclone.conf"
-            - "copy"
+            - "sync"
             - "--ignore-errors"
             - "--fast-list"
             - "--b2-hard-delete"
@@ -48,7 +48,7 @@ spec:
             - "-v"
             - "--config"
             - "/config/rclone.conf"
-            - "copy"
+            - "sync"
             - "--ignore-errors"
             - "--fast-list"
             - "--b2-hard-delete"
