--- a/cluster/apps/media/radarr-uhd/helm-release.yaml
+++ b/cluster/apps/media/radarr-uhd/helm-release.yaml
@@ -28,6 +28,7 @@ spec:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
         kubernetes.io/tls-acme: "true"
+        cert-manager.io/cluster-issuer: letsencrypt-production
       hosts:
       - host: radarr-uhd.holthome.net
         paths:
@@ -41,6 +42,7 @@ spec:
       - enabled: true
         nameSuffix: "api"
         annotations:
+          external-dns.alpha.kubernetes.io/target: 10.20.0.2
           kubernetes.io/ingress.class: "nginx"
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
