--- a/cluster/core/rook-ceph/storage/ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/storage/ceph-cluster.yaml
@@ -75,8 +75,8 @@ spec:
       - name: "sdb"
       - name: "sdc"
       - name: "sdd"
-    - name: "node-3"
-      devices:
-      - name: "sdb"
-      - name: "sdc"
-      - name: "sdd"
+    # - name: "node-3"
+    #   devices:
+    #   - name: "sdb"
+    #   - name: "sdc"
+    #   - name: "sdd"
