--- a/cluster/crds/external-secrets/crds.yaml
+++ b/cluster/crds/external-secrets/crds.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 30m
   url: https://github.com/external-secrets/kubernetes-external-secrets.git
   ref:
-    tag: 8.0.1
+    tag: "8.0.1"
   ignore: |
     # exclude all
     /*
