--- a/cluster/crds/kustomization.yaml
+++ b/cluster/crds/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 - external-dns
 - external-secrets
 - external-snapshotter
-# - kube-prometheus-stack
+- kube-prometheus-stack
 # - registry-creds
 - rook-ceph
 - traefik
