--- a/cluster/crds/registry-creds/crds.yaml
+++ b/cluster/crds/registry-creds/crds.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 30m
   url: https://github.com/alexellis/registry-creds.git
   ref:
-    tag: v0.2.7
+    tag: "0.2.7"
   ignore: |
     # exclude all
     /*
