--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -9,7 +9,8 @@ data:
   GATEWAY_IP: "10.20.0.1"
   # Service IPs
   SVC_ADGUARD_ADDRESS: "10.45.10.13"
-  SVC_COREDNS_ADDRESS: "192.168.69.100"
+  SVC_COREDNS_ADDRESS_EXTERNAL: "10.45.10.53"
+  SVC_COREDNS_ADDRESS_INTERNAL: "10.43.10.53"
   SVC_PLEX_ADDRESS: "10.45.100.100"
   SVC_QBITTORRENT_ADDRESS: "192.168.69.106"
-  SVC_VERNEMQ_ADDRESS: "192.168.69.109"
+  SVC_VERNEMQ_ADDRESS: "10.45.10.11"
