--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
         nameSuffix: bittorrent
         type: LoadBalancer
         externalIPs:
-        - 10.20.50.157
+        - "${SVC_QBITTORRENT_ADDRESS}"
         port:
           port: 50413
           name: bittorrent
