--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -5,69 +5,55 @@ metadata:
   name: cluster-secrets
   namespace: flux-system
 data:
-  HASS_SECRET_LATITUDE: ENC[AES256_GCM,data:KL89MgbrUAvaBb4S,iv:lx4P+oQH5v3bKqjh5tp25lQGlxo1ixD2eML8+YIX16s=,tag:09f00DYM7budnir8QrsBog==,type:str]
-  HASS_SECRET_LONGITUDE: ENC[AES256_GCM,data:B35Y2r/3tZGGOZhF3+AdXQ==,iv:q+4MB53qACx2FjhTsQQk2f307aHhmZ4mrgJKCdrFQG8=,tag:Ch/wUF32qKBli8J/4u0r9Q==,type:str]
-  HASS_SECRET_ELEVATION: ENC[AES256_GCM,data:8zIMYB/2QGQ=,iv:bCzBrxkI2UgfEXibLdMzrMgkpXPhG/HFTfcKwZLJQKg=,tag:Ikgv+LTN2C1DwcadHv1yhw==,type:str]
-  HASS_EXTERNAL_URL: ENC[AES256_GCM,data:V96QPbEowXn6hVNhzZWfWSDt/rrg0NoxTXscZTaypG0=,iv:4XPWc1HhUl/E3X6TSEpK2FI2f/dMoOg/ZBa+9kndlMk=,tag:4Hh+oZ9yqBgHA7mCjAHAtQ==,type:str]
-  HASS_RECORDER_POSTGRESQL: ENC[AES256_GCM,data:Y8iMGTBCiQ3uzSwYmB1H19UBl32kkrkuSbcgHmFlEM5TAjgza2NJv3oRUiQyZF7Ip30AX+dnRU4+jaIBUvBhULxCCHJHsmoK/aSaeST2HzQ74Tv5C8qJqa74OMO1xEcS/1ImhNqisc9uoMhs3/h7mzedmbz4JHws,iv:qLqs4GQ97Ic52ImWZ407qCLntWpPkDZPH3Qonq0GsUI=,tag:gMlv8tnEKuS7+N9uruCJqQ==,type:str]
-  HASS_ECOBEE_API_KEY: ENC[AES256_GCM,data:MsV+hop0KA3ex65xWiGJE8jnowmB0eETCLANi8pY0Rf5AecYxg0cHDj29Lk=,iv:u7w0HMYAq6TaM/BYZG2Tw2Ad7yORUHqX4R7WAe45z3w=,tag:GAXt0B5dpa36qpNDFP9i9w==,type:str]
-  HASS_AUGUST_PASSWORD: ENC[AES256_GCM,data:dALZ1unbiAOQplAp8pQ4Xw==,iv:P3Q+j9BV1SPJMgO1UPTVrSwi3mzDCjxQefIonw/k8xU=,tag:MBiF8HM0EeuATnIPH6+nPQ==,type:str]
-  HASS_AUGUST_EMAIL: ENC[AES256_GCM,data:g/SjS5Xt/u1QFr+nN5EKjP+V7WDOktSX,iv:j0LPsMnZmzgO3Fe1B1XzQQZzKWpM7L5VjFsJD9idjBg=,tag:UEWvvRxaglfqKhgHhLxwOg==,type:str]
-  HASS_NEST_CLIENT_ID: ENC[AES256_GCM,data:ZjKO6g3DXQfqJETE6xqy7xQZN7B2GL65+bsjAdOFs3zwkUzCoDBSea4vNwpakhndrejr6eX7KMyO36V3MNN/CaSaQdFTYSb8c8g1v8CDmsB8ifvZA1RLn7UUeN5HgXTS,iv:27bk2JiR03kzkcgN/IT/dIHbguB8elyxCXM+pkovCiA=,tag:2fpOGGacSFrawFVB0ROZsA==,type:str]
-  HASS_NEST_CLIENT_SECRET: ENC[AES256_GCM,data:DiWVEwniHBl4NusiRMXFnpVoCsJv0umAOmLpqhYZFD4=,iv:DnU0AQJRDpaN6iSoTAyicpPWOyGDqwjIa40GWIX9fI4=,tag:etBYJOtuyXuEbOyWZDdtbw==,type:str]
-  HASS_NEST_PROJECT_ID: ENC[AES256_GCM,data:2OI3txxCjDKtbxNkI278u1Q3ssQqDvy6sQZd/2BiMPlpNUOqz4xyVoUgKnzZPktz,iv:kURoDEZMNOKje18VM7crU7eV3mzAnlYLGCO/GqL+lWo=,tag:TeuqDo3X8OUiIIRphNZKXA==,type:str]
-  HASS_NEST_SUBSCRIBER_ID: ENC[AES256_GCM,data:xS7gTHHG/PGWRzJvFFlDY0WilRpnFxHYkDnk8JcygFZTOn+Etqfm7qdX7nGJnXKA9N6jYARVlg0qwAPdqH6m5L8qVncrTCZpmXHFJA==,iv:rjKLj1mYHW+P7mHwy41P9LoCP8Ej6yowdJfUT2JvDto=,tag:KloUWNMLMrh5V9EJncpRbQ==,type:str]
-  HASS_SPOTIFY_CLIENT_ID: ENC[AES256_GCM,data:PDFoHnmqGgfk54kJO+vFRr5Dej9J5OKZ6+yhLPJr3iNY/YGODEQt4KH39s8=,iv:RbKKY3arrbFP4yVRvj39s7H8uSEJzOZ22R6WcZCAa74=,tag:a4kLZF4pxaQTblR68f36Uw==,type:str]
-  HASS_SPOTIFY_CLIENT_SECRET: ENC[AES256_GCM,data:IJvgdC0+1xcP7Urdocl/uImuIzao3YRf9S0++6C8TKRI/ouW7ZHlFuIn2/w=,iv:wX681lIeEMQsEEM5Wbz7QNrfX2BOsBZhgNOIiquQAlE=,tag:IiirZdEn0vbgGGCm7aE7bA==,type:str]
-  HASS_BASEMENT_BACK_DOOR_CAMERA_MAIN: ENC[AES256_GCM,data:+EmSGPfKlggdu7FnJn6t7xHe81ZLzpbn8rwhc6mDUJkHD0bhKdkYuKmQvfBjG3xbq40ZVriZKQCw6jCHQcOv/OjaeoIY7iiqLzpF47lINhi/xfiP/OhjE/iNXyy7dHoGj4MQwdGtYLYnrYs6VXhW316ab3XQiQrGNP+L1s3pTyz2OfzS,iv:/W5biXhFV3GhPPxFoart2hCsNBWv96jlM+jmFUvNEEA=,tag:hxHXd4W8zlw973jzsjfwhw==,type:str]
-  HASS_BASEMENT_BACK_DOOR_CAMERA_SUB: ENC[AES256_GCM,data:bABaggLEDxbY43Su0O1LtGn+Xb2hLKQh9/rxQFxU+iX+4BXfUpPsX9T3TmyOQHcFcJ9++3BzeyiLWFTrHrJRKz1hcKylXnK2dyRNRqURTn2ICojS3kWAx2JoN9NUW1Krbi0tat2nchT5MJG03XkKqvlh7yiliBaXDbEPwSwflejNTF9C,iv:UIceCNyB/VQe1/vULNnjtKGImhIYAsf5OUduj6w2QCU=,tag:chZi9r/c+MjdI1WRF00bOg==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:6dKbbSHa/mY+3RfR,iv:6ihNYf9JzRco0bKADTdWfj3oPht3sF8Ejv/e7SnN9vI=,tag:CAbbGt7/7KVXwjYw7PwTXw==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
-  lastmodified: "2021-02-28T17:56:29Z"
-  mac: ENC[AES256_GCM,data:tgmvWZGmYrk9aIrMKzHbHBFYFdionlCk+LS3RjGZ0YNHKY5vxoUs6HlnufjtAo3FJt4PZZEPLGbeU8sWgeCXP0Ege2ylCEdc4e2BPs6nQEgpP/+3BFkQUlAyaNE3YY64v1YrqkFtWEDdKrYkbrGQ3eKlbOwqixg2+Iq3oMrxePI=,iv:aqJzVhREUjOav9Y8sWkNA0cz/XHrko7v0ch6xUruHtw=,tag:5bK9gKX639Hsq67FME6sZA==,type:str]
+  age: []
+  lastmodified: "2021-06-01T18:03:53Z"
+  mac: ENC[AES256_GCM,data:XpJ+MC/iWrW7qpESuPcQRRTkWcT8lO3vDryZSiql2ryTc/oC5ZWgJ4PmGKvRxSuMF/fGbEdrCIi7s12IRxCI4v7k0XGomloFg6lS4TirJbKxwpD/PmhE6BDTj1dgwO+uHsrisIvyg9njHjdNQdLHnsfBXKJw8ICbAMZcwkNpxQU=,iv:hTd4PQFUxFXDNQr0t7BW3PzJH6DM2Yf5Y4AocXrCgEA=,tag:zCCgx/QAl+jqBuXe6CfmNQ==,type:str]
   pgp:
-    - created_at: "2021-02-28T17:56:28Z"
+    - created_at: "2021-06-01T18:03:52Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8oSIqtHvng8AQ/7Bbc9QyOtu7fxjeIYn7rFuSzkTI679skO7fZRlEs4tcVg
-        S4u94kj3VCfhtHdT9PYl0CLpu5+zP79igfhUlCAOSblcgLIL+ljn2DB9tbbFSrJk
-        vypimOv/UsW9g49Dz0PULe3vsI2bn+6CAFwcYrfLWdf/Swn+SOXvvrgVHH6ia6IU
-        kErCtyIhFD4Z7Pub8NbIeXVf7/GOpi7tGENa4zUvNfPQqqSOTiSPuFhB2sVeDyeq
-        0Oa9jRkvz3dqIwGVJb+1w7yHKDD+E85hn4F1AKHCdH/axQ50zJnBXlZI55q3NYA+
-        uMYyqoHBLrlzRZTEWZTf1Wq6kijSAvETyVLUDi4B1M/OZVEDUNxHmYM32QTCnC7J
-        ioJkFY1AXfP4xlImBpMFPoyqWB8GyA1cTBeTN8nRrWxAZ5TzCm4UE3eFmyyQ9hUr
-        mg5TiZNR5AUEuDqSBHU+MO5YD+SO9PF3Fm5LtodgkbZ6pve4Ff/uWxWqOj1xlUh1
-        dYLJ7o3POb6aRtgagvfU4SeDSyBu7tvjyC4NpcNjoELO04RzevDwUwaMF9YqyG5O
-        NXAf7Upq0RnE8uOq7vRhVnn0ROtjtF96grruT8GGu7DU7qm5xva9vYLMkV8KK0cE
-        Q+XLtcG+D0UV3eL6yhY2LMpvevJCJC3l3ffVptptInIzorO+mHJjsnly+K0KTNLS
-        XgExuPeP0V+IzDsb9wR/kcu0+Dso+bDi3AQw73tN9C9Wuaq07DRBPlWkx/8AOsNc
-        rrV2byRYOLDn90rfNBOdPg0ZljwTZoMcPydrn/ltSL8aFX2p7TqGbn/dWmEizko=
-        =/cEk
+        hQIMA8oSIqtHvng8ARAAmq57UB3JrTyJ9XUTufQzRCVN72bJRAEJRI9wKZIgre90
+        6CEoP/fQpS7P0T+7lWLYkrLMcLupTiBCcVWnOhBgA8vdHSyjalmsWC5pmArKpbAA
+        ioo8aC9bdfyQfV1pe2El+v4ffLFc62gx2KPySrbXuVBybccUxr3qqEUfv8WCc2/r
+        cNCNZcNh1X5/plCiAjFRSJmnK0wB3Gu/riC9TD/BClIJfQ+7eSmdbVaaufN9/zxH
+        3CwEC9gnffTAHcpOq1yg8y73r6yhmUqHW8OQDZRC4NbPACM02CH6M9WIIZrPI1jv
+        YmUA8hsR1IjD9fCoDlOpZ6atcNnfxirNm9mbqTQ8Y8TxZgSfV5DUmOKOTKtCRyUK
+        2BxFpC3NFkSP2PRWvc1sUkJcrZogNq6xg1Jx/yYhW+b6ywVE0rymnIIJeD2NbR9L
+        33UR5mBoWnp1cluYt/heDC77f8OqZSUMz0SrVR34d58iYR66X6hi8TRu1SVw8pnx
+        mKcnrBTIG/ZaiC4Qp8df+CHsROADaiIL/hrNRZ9kOonvqHYpZEgNNdawQMCckuc/
+        7p97WOBQdH7O7y6XLzZn5JDyCVC2mSR8ESL7zvjUZItmf+x/NYfKRdqwo7b7uvS/
+        ZAKC3SfL3HZO2mk65BuFWMaH8rUdYaRQ1xVN2a5U0LW6f8fgmcTm5h5wt58x82TS
+        XgEH2o4R/I0WmGwvdiF4e4afZOUMyZ+ULAJ+62ZTDGVvzb/jTxr8gbKcvQAiZvKc
+        WuDD1p1LU3LfpkbI+DJSoF7S+7GnWvJ5zc1TqAyGAxSoRvdRTG2TcJtlD5JA29A=
+        =phOw
         -----END PGP MESSAGE-----
       fp: DA8002060402EC39B195451D5CED80362B5A4EF2
-    - created_at: "2021-02-28T17:56:28Z"
+    - created_at: "2021-06-01T18:03:52Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8ORz3KkY6O4ARAAm/3vwenLTe3F2QaR6EduXzd89/hl3oA+51knN7LDtoxw
-        DD3Kc8CAA/vsKQSv26x+IyigdxUX5xEICPZ7TLk7oH/y/jqO39k7vhijDFxtGS3b
-        O6rbEZCPZ3jolV7ezMOZF1L73nKSBjLALty1FP0Qam0aaACvXlCK57uMiPLo45a1
-        NfIAhivn9dZ4uGTg3mwAein2WZ5zCPN2eyctt2wdn84zBhcIFflErYtE+juEobtP
-        y5KHrHk2IySnMHhDd6N9wrrArMmxNhBrs7dMKgez4ptUrTpqm29ilvwtTB9h+5xq
-        buxOoM/fRfbR+GoZ+ubCGXjBbjiCyZYZ+wwcgOaZMjR8ynk5bF0Jr29h82kzE3gE
-        2ClXra58MfgrHfLD9n6X2B6gObmtSdkufjMG1vyw/wpVZTXA9SkL5cuX0lrlWFyp
-        ACoFkQ48PrH+wDLiBS2xAYg/N9bAKT7CBx8cdM35izJEneFIX2HNXHupyc6Tik6F
-        5/PdEy+OM8OKGmMr++fkHdtYPqMxq+oeTVglp5XTwPMw9dwg6PaEaqGO+wLFOVYi
-        rHRyjKTNQBqMh7uvpSe7eOmK6kn3URaZWmcmD51zLjmP1Z7l3mGJpIiFtcXnJSF0
-        t87IdXxbREkiMzz1MAbxQvlmdgwywzOMy0eE0wHX8oy6Jsx4qdfpoIEBD7eaZaHS
-        XgE3rcepkVCC3pKYgS+cK0bOVG7r9B+te4IcbcNdnpT0zP1TG7kCoxTk0smMORIw
-        paInN+El/xN21mne9Xxi1+Z97W2l8bEQbnE1YBfnFuXSZTzKjiEM1GDZjKjnCPQ=
-        =eCBb
+        hQIMA8ORz3KkY6O4AQ/+Nu62XZ0PSqDJRxkeZ1diG1oViZRQHJOnwwCoTL8fB7J1
+        5oz1elk6qtN2cwh5Dw3ABx2RIi5D/U7I+N3fTxpJ7wcqUGca00UV3LKwtYOkQBMt
+        D5KjcVCr/9cX8C9bDAyR23gMsIvqHseqlR8a2ylBMLXWhy4wG5nOyjzQnOM/6nrj
+        Ci6oT5NpNDsmsaBuYizcTCTBylVu/44X18nxo0UDabgemx4E1b1xGtj425G91EaO
+        KkdvI0Vd2nGN+EZDHZ+O8qY701KGSGyfRUcbpi9Yw4DpxxvfaU/1lrhb+dcvJ3r8
+        O200JpQLa6B2Sk3GEn4mxW0N4RgoocMnN9UalTgI3lAuEkQhVaSitQebWGGJofbE
+        FxoK9rP1FAr+cfQF9j2BqWCLAMQnCQzLW+Yz9VZ9FIAdZX7mdeYegX/xA/+gDCq/
+        saKuu47d0HvFkyInk3QrQOnqfWfOtyJ/86gY+AW1cPIrQ0AHH4L6x1aObZgztS9P
+        hof8gUvIFkZe0NPUp6lEAAwCE354xNLmzm3OczGudgrZnUQFSmA/0C+jTlHVyoad
+        /2TMWYa0uUWLJd2ORpf4cfEdwyQsBJh+beEPynpPAyTMMt/EWBxN9CkSahVa3sbq
+        OXl1I0fGwZel+LW3LSkjZ3wuiFTktZLsf3kSwB29q/C7SqgGJpU7P9XwS+lTG/TS
+        XgHslL4cLTe9nrRC9/UfnJ8meNm6IBaZJQCP1iwzBeovEEgivzXby9mJRfPhWDUl
+        dzEpz6An3AlltVhEsOZcRSqHyc+MfkLOk00K6/naTZdiUw6J8sJ61dsEssnsb2A=
+        =sxfu
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
-  version: 3.6.1
+  version: 3.7.1
